@@ -1,5 +1,12 @@
 Sun Jan 10 00:42:03 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
 
+	* lib/Mj/Resend.pm (_post): Really delete tempfiles.
+
+	* lib/Majordomo.pm (_rekey): Don't explicitly skip the GLOBAL
+ 	list; let the list itself do what's appropriate.
+
+	* lib/Mj/List.pm (rekey): Don't rekey the GLOBAL list.
+
 	* lib/Majordomo.pm (_rekey): Don't try to rekey GLOBAL.
 
 Sat Jan  9 12:45:17 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
